Mes premier changement

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Page D'accueil</title>
 </head>
 <body>
+<h1>Welcome Page</h1>
+
+        <div> 
+            <h2>Hello World</h2>
+        </div>
     
 </body>
 </html>
